# Takt-OS

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  Takt-OS.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 404.html  README.md  _config.yml  api_reference.md  architecture.md  bootloader.md  certification.md  developer_guide.md  event_bus.md  faq.md  implementation_plan.md  index.md  kernel.md  licensing.md  memory.md  modules.md  platformio_vscode.md  recovery.md  scheduler.md  source_tree.md  timer_manager.md
docs/_includes/: footer.html  head.html  mermaid.html  nav.js.html  sidebar.html  tables.js.html
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/components/: drivers.md  examples.md  kernel.md  middleware.md  recovery.md  sdk_lite.md  services.md  takt_boot.md
docs/uml/: diagrams.md
docs/wiki/: Home.md  README.md  _Sidebar.md
drivers/: CMakeLists.txt
drivers/include/takt/drivers/: flash_backend.hpp  platform.hpp
drivers/src/: adc.cpp  flash_backend.cpp  platform.cpp  uart.cpp
examples/: CMakeLists.txt
examples/demo_controller/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini
examples/demo_controller/main/: CMakeLists.txt  main.cpp
examples/recovery_app/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
examples/recovery_app/main/: CMakeLists.txt  main.cpp
examples/wash_controller/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/wash_controller/main/: CMakeLists.txt  main.cpp
kernel/: CMakeLists.txt
kernel/include/takt/: cache_manager.hpp  crc32.hpp  diagnostics.hpp  event.hpp  event_bus.hpp  firmware_cache.hpp  imodule.hpp  kernel.hpp  logger.hpp  nvs_manager.hpp  scheduler.hpp  storage_manager.hpp  timer.hpp  timer_manager.hpp  types.hpp
kernel/src/: cache_manager.cpp  crc32.cpp  diagnostics.cpp  event_bus.cpp  firmware_cache.cpp  kernel.cpp  logger.cpp  nvs_manager.cpp  scheduler.cpp  storage_manager.cpp  timer.cpp
lite/: CMakeLists.txt  kernel_lite.cpp
middleware/: CMakeLists.txt
middleware/include/takt/modules/: ble_module.hpp  modbus_module.hpp  mqtt_module.hpp  relay_module.hpp  script_engine_module.hpp  sensor_module.hpp  uart_module.hpp  webserver_module.hpp  wifi_module.hpp
middleware/src/: ble_module.cpp  modbus_module.cpp  mqtt_module.cpp  relay_module.cpp  script_engine_module.cpp  sensor_module.cpp  uart_module.cpp  webserver_module.cpp  wifi_module.cpp
recovery/: CMakeLists.txt
recovery/include/takt/: recovery_manager.hpp  recovery_transports.hpp
recovery/src/: recovery_manager.cpp  recovery_transports.cpp
sdk/include/: takt_sdk.h
sdk/src/: takt_sdk.cpp
services/: CMakeLists.txt
services/include/takt/services/: config_manager.hpp  modbus_gateway.hpp  ota_service.hpp  telemetry_service.hpp
services/src/: config_manager.cpp  modbus_gateway.cpp  ota_service.cpp  telemetry_service.cpp
takt_boot/: CMakeLists.txt
takt_boot/include/takt/: bootloader.hpp
takt_boot/src/: bootloader.cpp
targets/esp32c3/: sdkconfig.defaults
targets/esp32s3/: sdkconfig.defaults
tests/: CMakeLists.txt  test_bootloader.cpp  test_event_bus.cpp  test_firmware_cache.cpp  test_nvs.cpp  test_scheduler.cpp  test_timer.cpp
tools/: add_attribution.py  flash_tool.py  manufacturing_test.py  partitions.csv  stress_test.py
